banner half added

--- a/index.html
+++ b/index.html
@@ -11,17 +11,31 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <h3 class="nav-title"><span style="color: #E55473;">F</span>lower<span style="color: #E55473;">D</span>okan</h3>
+        <section class="navbar">
+            <nav>
+                <h3 class="nav-title"><span style="color: #E55473;">F</span>lower<span style="color: #E55473;">D</span>okan</h3>
+    
+                <ul>
+                    <li><a href="">home</a></li>
+                    <li><a href="">facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><button class="btn-primary">Contact</button></li>
+                </ul>
+    
+            </nav>
+        </section>
 
-            <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><button class="btn-primary">Contact</button></li>
-            </ul>
+        <div class="banner">
+            <div class="banner-content">
 
-        </nav>
+             <h3 class="banner-title">Let's make beautiful flowers a part of your life.</h3>
+
+             <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+
+             <button class="btn-primary">Shop Now</button>
+            </div>
+            <img src="Flower Asset/pngwing 10.png" alt="">
+        </div>
     </header>
 
     <main>
