--- a/index.html
+++ b/index.html
@@ -72,6 +72,45 @@
             </div>
          </div>
         </section>
+
+        <section class="delivery">
+            <div class="delivery-issue">
+               <div>
+                   <div class="icon">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                   </div>
+                   <p>Same Day Delivery Click & Collect.</p>
+               </div>
+
+               <div>
+                   <div class="icon">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                   </div>
+                   <p>Fresh Flowers,Local Growers.</p>
+               </div>
+
+               <div>
+                   <div class="icon">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                   </div>
+                   <p>24/7 Free Support</p>
+               </div>
+            </div>
+        </section>
+
+
+        <section class="hot-deal-section">
+             <div class="hot-deal">
+                <div class="hot-deal-content">
+                    <h3 class="hot-deal-title">Hot deal ! Sale Up To 25% <span style="color:#E55473 ;">Off</span></h3>
+
+                    <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                    <button class="btn-primary">Sing Up</button>
+                </div>
+                <img class="flower" src="Flower Asset/pngwing 8.png" alt="">
+             </div>
+        </section>
     </main>
 
     <footer>
@@ -79,3 +118,4 @@
     </footer>
 </body>
 </html>
+
