--- a/index.html
+++ b/index.html
@@ -111,6 +111,50 @@
                 <img class="flower" src="Flower Asset/pngwing 8.png" alt="">
              </div>
         </section>
+
+        <section class="instagram">
+
+            <div class="instagram-content">
+                <h2 class="instagram-title">Instagram</h2>
+                <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="insta-flowers">
+
+           <div class="instagram-flowers">
+            <div>
+                <img class="flower" src="Flower Asset/Flower 01.png" alt="">
+            </div>
+
+            <div>
+                <img class="flower" src="Flower Asset/Rectangle 4.png" alt="">
+            </div>
+
+            <div>
+                <img class="flower" src="Flower Asset/Rectangle 5.png" alt="">
+            </div>
+
+            <div>
+                <img class="flower" src="Flower Asset/Rectangle 6.png" alt="">
+            </div>
+           </div>
+
+            </div>
+
+        </section>
+
+        <section>
+            <div class="latest">
+                
+                <div class="latest-content">
+                    <h3 class="latest-title">Get The Latest Deals</h3>
+                    <p class="latest-description">$30 coupon for first shopping</p>
+                    <input class="input" type="text" placeholder="Enter your Email">
+                    <button class="btn-primary">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
