--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <main>
         <section class="featured-flower">
+        <div class="fl-bg-size">
             <div class="flower">
                 <h2 class="flower-title">Our Featured flower </h2>
                 <p class="flower-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -52,25 +53,26 @@
          <div class="flower-types">
             <div>
                 <div class="pink">
-                    <img class="flower-one" src="Flower Asset/pngwing 6.png" alt="">
+                    <img class="ff-img1" src="Flower Asset/pngwing 6.png" alt="">
                 </div>
-                <h4 class="text-decoration">pink flower tree</h4>
+                <h4>Pink Flower Tree</h4>
             </div>
 
            <div>
             <div class="skyblue">
-                <img class="flower-two" src="Flower Asset/pngwing 5.png" alt="">
+                <img class="ff-img2" src="Flower Asset/pngwing 5.png" alt="">
                 </div>
-                <h4 class="text-decoration">pink flower pic</h4>
+                <h4>Pink Flower Tree</h4>
            </div>
 
             <div>
                 <div class="lightgreen">
-                    <img class="flower-three" src="Flower Asset/pngwing 7.png" alt="">
+                    <img class="ff-img3" src="Flower Asset/pngwing 7.png" alt="">
                 </div>
-                <h4 class="text-decoration">pink flower pic</h4>
+                <h4>Pink Flower Tree</h4>
             </div>
          </div>
+        </div>
         </section>
 
         <section class="delivery">
@@ -79,14 +81,14 @@
                    <div class="icon">
                     <img src="Flower Asset/Group 57.png" alt="">
                    </div>
-                   <p>Same Day Delivery Click & Collect.</p>
+                   <p>Same Day Delivery. Click & Collect.</p>
                </div>
 
                <div>
                    <div class="icon">
                     <img src="Flower Asset/Group 58.png" alt="">
                    </div>
-                   <p>Fresh Flowers,Local Growers.</p>
+                   <p>Fresh Flowers. Local Growers.</p>
                </div>
 
                <div>
@@ -108,7 +110,9 @@
 
                     <button class="btn-primary">Sing Up</button>
                 </div>
+                <div class="flower-sec">
                 <img class="flower" src="Flower Asset/pngwing 8.png" alt="">
+                </div>
              </div>
         </section>
 
@@ -143,17 +147,16 @@
 
         </section>
 
-        <section>
             <div class="latest">
-                
                 <div class="latest-content">
-                    <h3 class="latest-title">Get The Latest Deals</h3>
-                    <p class="latest-description">$30 coupon for first shopping</p>
-                    <input class="input" type="text" placeholder="Enter your Email">
-                    <button class="btn-primary">Subscribe</button>
+                    <div class="opt-in">
+                        <h3>Get The Latest Deals</h3>
+                        <p>$30 coupon for first shopping</p>
+                        <input type="text" placeholder="Enter your Email">
+                        <button class="btn-primary">Subscribe</button>
+                    </div>
                 </div>
             </div>
-        </section>
 
     </main>
 
