--- a/index.html
+++ b/index.html
@@ -161,7 +161,20 @@
     </main>
 
     <footer>
+         <div class="footer">
+           <div class="footer-all">
 
+            <div class="footer-content">
+
+                <h3 class="footer-title"><span style="color:#E55473 ;">Flower</span>Shop</h3>
+                <p class="footer-content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+
+            </div>
+
+           </div>
+            
+         </div>
     </footer>
 </body>
 </html>
