--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 
                 <div class="footer-content">
 
-                    <h3 class="footer-title"><span style="color:#E55473 ;">Flower</span>Shop</h3>
-                    <p class="footer-content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                    <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+                    <h3 class="footer-title"><span style="color:#E55473 ;">Flower</span>Dokan</h3>
+                    <p class="footer-content">Flowers are a gift to this earth. As Gerard De Nerval once said, “Every flower is a soul blossoming in nature.</p>
+                    <p>@2020-2023, FlowerDokan.com. All rights reserved. </p>
 
                 </div>
 
@@ -180,5 +180,5 @@
         </footer>
     </body>
     </html>
-    
+
 
